--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Italiana&display=swap");
+@import './styles/_global.scss';
 
 body {
   background-color: #f6f6f6;
