--- a/src/pages/Cardapio/Buscador/Buscador.module.scss
+++ b/src/pages/Cardapio/Buscador/Buscador.module.scss
@@ -1,5 +1,5 @@
-// @import "styles/variaveis";
-// @import "styles/breakpoints";
+@import "../../../styles/variables";
+@import "../../../styles/breakpoints";
 
 .buscador {
   align-items: center;
