--- a/src/pages/Cardapio/Cardapio.module.scss
+++ b/src/pages/Cardapio/Cardapio.module.scss
@@ -1,3 +1,47 @@
+@import "../../styles/variables";
+@import "../../styles/breakpoints";
+
+.menu {
+  padding: 20px $padding-horizontal;
+  @media (max-width: $desktop_xsm) {
+    padding: 20px $padding-horizontal-mobile;
+  }
+  @media (min-width: $desktop_xsm) and (max-width: $desktop_sm) {
+    padding: 20px $padding-horizontal-sm;
+  }
+  @media (min-width: $desktop_sm) and (max-width: $desktop_md) {
+    padding: 20px $padding-horizontal-md;
+  }
+}
+
+.header {
+  align-items: center;
+  background-image: url('../../assets/cardapio/header.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  height: 300px;
+  // colocando dentro do container principal
+  padding: 0px $padding-horizontal;
+  @media (max-width: $desktop_xsm) {
+    padding: 0px $padding-horizontal-mobile;
+  }
+  @media (min-width: $desktop_xsm) and (max-width: $desktop_sm) {
+    padding: 0px $padding-horizontal-sm;
+  }
+  @media (min-width: $desktop_sm) and (max-width: $desktop_md) {
+    padding: 0px $padding-horizontal-md;
+  }
+  &__text {
+    color: white;
+    font-size: 5rem;
+    // quando chegar nesse tamanho, quebra... 
+    min-width: 400px;
+    // em relação a tela
+    width: 40%;
+  }
+}
+
 .cardapio {
   padding: 50px $padding-horizontal;
   @media (max-width: $desktop_xsm) {
